# roomPing

./: .astylerc  .gitignore  .gitmodules  .markdownlint.yml  .travis.yml  .yamllint.yml  CHANGELOG.md  README.development.md  README.md
.github/workflows/: markdownlint-cli.yml  yamllint.yml
src/: CHANGELOG.md  CMakeLists.txt  Makefile  log  sdkconfig.defaults.esp8266
src/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  constant_task.h  main.c  metric.h  sntp_connect.c  sntp_connect.h  target.h  target.h.dist  task_bme280.c  task_bme280.h  task_icmp_client.c  task_icmp_client.h  task_ota.c  task_ota.h  task_publish.c  task_publish.h  task_wifi_scan.c  task_wifi_scan.h  util.c  util.h  wifi_connect.c  wifi_connect.h  wifi_connect_esp32.c  wifi_connect_esp8266.c
src/main/certs/: ca_cert_ota.pem  ca_key_ota.pem
tools/: format-minimal.sh  format.sh  nginx.conf
